# cpp-pico

./: CMakeLists.txt  README.md
doc/: building_a_pico_project.md  debugging_the_pico.md  flashing_the_pico.md  workspace_setup.md
projects/gamepad/: CMakeLists.txt  gamepad.c  gamepad.md
projects/hello/: CMakeLists.txt  hello.md
projects/hello2/: CMakeLists.txt  hello2.cpp  hello2.md
projects/monstera-led/: CMakeLists.txt  monstera-led.cpp  monstera-led.md
projects/ros2-led/: CMakeLists.txt  ros2-led.cpp  ros2-led.md
